--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -18,9 +18,9 @@
   "eat-kano": "吃掉小鹿乃",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
-  "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能得多少分",
+  "game-title": "茂哥冒险记",
+  "game-intro1": "全新音游",
+  "game-intro2": "每按一次都是满满的精喜",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
@@ -31,13 +31,13 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
+  "text-level-1": "你真的太逊了 我都还没溢出来",
   "text-level-2": "TCL",
   "text-level-3": "TQL",
   "text-level-4": "您",
   "text-level-5": "人?",
-  "time-over": "倒计时多了",
-  "rank-title": "吃掉小鹿乃-排行榜",
+  "time-over": "时间到了 你真的太逊了",
+  "rank-title": "茂哥捡肥皂记",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
   "week-rank": "排行榜[周]",
